--- a/ft_trans/proxy/nginx/nginx.conf
+++ b/ft_trans/proxy/nginx/nginx.conf
@@ -31,6 +31,11 @@ http {
     #     keepalive 32;
     #     server backend-django-chat:8002;
     # }
+	upstream backend-django-game1 { 
+        least_conn;
+        keepalive 32;
+        server backend-django-game1:8003;
+    }
 
     server {
         # ====== HTTP
@@ -92,6 +97,31 @@ http {
         #         return 204;
         #     }
         # }
+
+		# API Utenti
+        location /g1/ {
+            proxy_pass http://backend-django-game1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Protezione
+            limit_req zone=users_limit burst=20 delay=5;
+
+            # CORS
+            add_header Access-Control-Allow-Origin $http_origin always;
+            add_header Access-Control-Allow-Credentials true;
+            add_header Access-Control-Allow-Methods "GET, POST, DELETE, OPTIONS";
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization";
+
+            # Handle OPTIONS
+            if ($request_method = OPTIONS) {
+                add_header Content-Length 0;
+                add_header Content-Type text/plain;
+                return 204;
+            }
+        }
 
         # API Utenti
         # location /chat/ {
