voglio mangiare il tuo pancreas

--- a/ft_trans/.env
+++ b/ft_trans/.env
@@ -1,7 +1,9 @@
 # POSTGRES
+POSTGRES_DB=ft_trans
 POSTGRES_NAME=ft_trans
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
 
 # game1
 DJANGO_SETTINGS_MODULE=settings
+DJANGO_KEY=uhdufdbshufhyfhuerhfuyrsbugihruirnheu
