voglio mangiare il tuo pancreas

--- a/ft_trans/backend/game1/Dockerfile
+++ b/ft_trans/backend/game1/Dockerfile
@@ -7,5 +7,6 @@ RUN pip install --no-cache-dir -r requirements.txt && \
     apt-get update && apt-get install -y libpq-dev dos2unix netcat
 COPY . .
 RUN dos2unix ./wait-for-it.sh
+RUN chmod +x ./wait-for-it.sh
 
 CMD ["./wait-for-it.sh"]
