--- a/ft_trans/docker-compose.yml
+++ b/ft_trans/docker-compose.yml
@@ -53,6 +53,8 @@ services:
       - .env
     networks:
       - proxy
+    # volume:
+    #   - postgres_data:/var/lib/postgresql/data
 
 # Networks configuration
 networks:
