voglio mangiare il tuo pancreas

--- a/ft_trans/.env
+++ b/ft_trans/.env
@@ -4,6 +4,6 @@ POSTGRES_NAME=ft_trans
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
 
-# game1
+# DJango
 DJANGO_SETTINGS_MODULE=settings
-DJANGO_KEY=uhdufdbshufhyfhuerhfuyrsbugihruirnheu
+DJANGO_KEY=vogliomangiareiltuopancreas
