--- a/ft_trans/proxy/nginx/nginx.conf
+++ b/ft_trans/proxy/nginx/nginx.conf
@@ -21,16 +21,11 @@ http {
         keepalive 32;
         server frontend-node:8080;
     }
-    # upstream backend-django { 
-    #     least_conn;
-    #     keepalive 32;
-    #     server backend-django:8000;
-    # }
-    # upstream backend-django-chat { 
-    #     least_conn;
-    #     keepalive 32;
-    #     server backend-django-chat:8002;
-    # }
+    upstream backend-django-utenti { 
+        least_conn;
+        keepalive 32;
+        server backend-django-utenti:8002;
+    }
 	upstream backend-django-game1 { 
         least_conn;
         keepalive 32;
