voglio mangiare il tuo pancreas

--- a/ft_trans/.env
+++ b/ft_trans/.env
@@ -7,3 +7,8 @@ POSTGRES_PASSWORD=admin
 # DJango
 DJANGO_SETTINGS_MODULE=settings
 DJANGO_KEY=vogliomangiareiltuopancreas
+YWT_KEY=vogliomangiareiltuopancreas
+
+# Email
+SEND_EMAIL=ft@trans.com
+SEND_PASSWORD=vogliomangiareiltuopancreas
