--- a/ft_trans/proxy/nginx/nginx.conf
+++ b/ft_trans/proxy/nginx/nginx.conf
@@ -14,6 +14,7 @@ http {
 
     # Protezione API: Limiti
     limit_req_zone $binary_remote_addr zone=users_limit:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=gama1_limit:10m rate=10r/s;
     
     # Server
     upstream frontend-node { 
@@ -21,10 +22,10 @@ http {
         keepalive 32;
         server frontend-node:8080;
     }
-    upstream backend-django-utenti { 
+    upstream backend-django-users { 
         least_conn;
         keepalive 32;
-        server backend-django-utenti:8002;
+        server backend-django-users:8002;
     }
 	upstream backend-django-game1 { 
         least_conn;
@@ -68,34 +69,34 @@ http {
             proxy_set_header Connection "upgrade";
         }
 
-        # API Utenti
-        # location /users/ {
-        #     proxy_pass http://backend-django;
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header X-Forwarded-Proto $scheme;
-
-        #     # Protezione
-        #     limit_req zone=users_limit burst=20 delay=5;
-
-        #     # CORS
-        #     add_header Access-Control-Allow-Origin $http_origin always;
-        #     add_header Access-Control-Allow-Credentials true;
-        #     add_header Access-Control-Allow-Methods "GET, POST, DELETE, OPTIONS";
-        #     add_header Access-Control-Allow-Headers "Content-Type, Authorization";
-
-        #     # Handle OPTIONS
-        #     if ($request_method = OPTIONS) {
-        #         add_header Content-Length 0;
-        #         add_header Content-Type text/plain;
-        #         return 204;
-        #     }
-        # }
-
-		# API Utenti
+		# BackEnd Gioco1
         location /g1/ {
             proxy_pass http://backend-django-game1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Protezione
+            limit_req zone=gama1_limit burst=20 delay=5;
+
+            # CORS
+            add_header Access-Control-Allow-Origin $http_origin always;
+            add_header Access-Control-Allow-Credentials true;
+            add_header Access-Control-Allow-Methods "GET, POST, DELETE, OPTIONS";
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization";
+
+            # Handle OPTIONS
+            if ($request_method = OPTIONS) {
+                add_header Content-Length 0;
+                add_header Content-Type text/plain;
+                return 204;
+            }
+        }
+
+        # BackEnd Users
+        location /users/ {
+            proxy_pass http://backend-django-users;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -117,31 +118,6 @@ http {
                 return 204;
             }
         }
-
-        # API Utenti
-        # location /chat/ {
-        #     proxy_pass http://backend-django-chat;
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header X-Forwarded-Proto $scheme;
-
-        #     # Protezione
-        #     limit_req zone=users_limit burst=20 delay=5;
-
-        #     # CORS
-        #     add_header Access-Control-Allow-Origin $http_origin always;
-        #     add_header Access-Control-Allow-Credentials true;
-        #     add_header Access-Control-Allow-Methods "GET, POST, DELETE, OPTIONS";
-        #     add_header Access-Control-Allow-Headers "Content-Type, Authorization";
-
-        #     # Handle OPTIONS
-        #     if ($request_method = OPTIONS) {
-        #         add_header Content-Length 0;
-        #         add_header Content-Type text/plain;
-        #         return 204;
-        #     }
-        # }
 
         # Default 404
         error_page 404 /404.html;
