voglio mangiare il tuo pancreas

--- a/ft_trans/.env
+++ b/ft_trans/.env
@@ -10,5 +10,6 @@ DJANGO_KEY=vogliomangiareiltuopancreas
 YWT_KEY=vogliomangiareiltuopancreas
 
 # Email
-SEND_EMAIL=ft@trans.com
 SEND_PASSWORD=vogliomangiareiltuopancreas
+SEND_EMAIL=contact@ft.trans
+HOSTNAME=mail.trans.com
