--- a/ft_trans/docker-compose.yml
+++ b/ft_trans/docker-compose.yml
@@ -60,6 +60,17 @@ services:
     volumes:
       - db_postgres:/var/lib/postgresql/data
 
+  # PostFix
+  postfix:
+    container_name: postfix
+    build:
+      context: ./backend/postfix
+      dockerfile: Dockerfile
+    env_file:
+      - .env
+    networks:
+      - proxy
+
 # Networks configuration
 networks:
   proxy:
