voglio mangiare il tuo pancreas

--- a/ft_trans/backend/postfix/Dockerfile
+++ b/ft_trans/backend/postfix/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian:bullseye
 
-RUN apt-get update && apt-get install -y  postfix dovecot-core dovecot-imapd dovecot-pop3d \
+RUN apt-get update && apt-get install -y  postfix dovecot-core dovecot-imapd dovecot-pop3d openssl \
     && apt-get clean
 
 COPY main.cf /etc/postfix/main.cf
@@ -11,8 +11,11 @@ COPY 10-auth.conf /etc/dovecot/conf.d/10-auth.conf
 
 RUN echo "${SEND_EMAIL} ${SEND_PASSWORD}" > /etc/postfix/sasl_passwd && \
     chmod 600 /etc/postfix/sasl_passwd && \
-    postmap /etc/postfix/sasl_passwd && \
-    sed -i "s/placeholder_hostname/${HOSTNAME}/g" /etc/postfix/main.cf
+    postmap /etc/postfix/sasl_passwd 
 
+RUN mkdir -p /etc/postfix/certs && \
+    openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/postfix/certs/server.key -out /etc/postfix/certs/server.crt -subj "/C=IT/ST=Rome/L=Rome/O=fttrans/OU=fttrans/CN=localhost"
+
+EXPOSE 587
 EXPOSE 25
 CMD service postfix start && service dovecot start && tail -f /dev/null
