voglio mangiare il tuo pancreas

--- a/ft_trans/.env
+++ b/ft_trans/.env
@@ -10,5 +10,5 @@ DJANGO_KEY=vogliomangiareiltuopancreas
 YWT_KEY=vogliomangiareiltuopancreas
 
 # Email
-SEND_PASSWORD=vogliomangiareiltuopancreas
-SEND_EMAIL=contact@ft.trans
+SEND_PASSWORD=jyyg okob xovn trsl
+SEND_EMAIL=69tf.trans@gmail.com
