--- a/ft_trans/Makefile
+++ b/ft_trans/Makefile
@@ -2,11 +2,11 @@ start:
 	docker compose up --build
 
 prune:
-	-docker stop $$(docker ps -qa)
-	-docker rm $$(docker ps -a -qa)
-	-docker rmi -f $$(docker images -qa)
-	-docker volume rm $$(docker volume ls -qa)
-	-docker network rm $$(docker network ls -q)
+	-docker compose down --volumes --remove-orphans
+	-docker stop $(docker ps -qa)
+	-docker rm -f $(docker ps -a -qa)
+	-docker volume rm -f $(docker volume ls -qa)
+	-docker network rm $(docker network ls -q) || true
 	-docker image prune --all --force
 	-docker system prune --all --force --volumes
 
