voglio mangiare il tuo pancreas

--- a/ft_trans/proxy/nginx/nginx.conf
+++ b/ft_trans/proxy/nginx/nginx.conf
@@ -50,6 +50,8 @@ http {
         ssl_ciphers 'TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:TLS_AES_128_GCM_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
         # ===========
 
+        client_max_body_size 5M;
+
         # Controllo degli host autorizzati
         if ($host !~* ^localhost$) {
             return 403;
