--- a/ft_trans/proxy/nginx/nginx.conf
+++ b/ft_trans/proxy/nginx/nginx.conf
@@ -11,7 +11,6 @@ http {
                            '"$http_referer" "$http_user_agent" "$request_body"';
     access_log /var/log/nginx/access.log custom_logs;
 
-
     # Protezione API: Limiti
     limit_req_zone $binary_remote_addr zone=users_limit:10m rate=10r/s;
     limit_req_zone $binary_remote_addr zone=gama1_limit:10m rate=10r/s;
@@ -52,23 +51,17 @@ http {
 
         client_max_body_size 5M;
 
-        # Controllo degli host autorizzati
         if ($host !~* ^localhost$) {
             return 403;
         }
 
-        # Frontend (React Native App)
+        # Frontend (Node.js)
         location / {
             proxy_pass http://frontend-node;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-
-            # Supporto WebSocket
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
         }
 
 		# BackEnd Gioco1
@@ -79,21 +72,12 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
-            # Protezione
             limit_req zone=gama1_limit burst=20 delay=5;
 
-            # CORS
             add_header Access-Control-Allow-Origin $http_origin always;
             add_header Access-Control-Allow-Credentials true;
             add_header Access-Control-Allow-Methods "GET, POST, DELETE, OPTIONS";
             add_header Access-Control-Allow-Headers "Content-Type, Authorization";
-
-            # Handle OPTIONS
-            if ($request_method = OPTIONS) {
-                add_header Content-Length 0;
-                add_header Content-Type text/plain;
-                return 204;
-            }
         }
 
         # BackEnd Users
@@ -104,21 +88,31 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
-            # Protezione
             limit_req zone=users_limit burst=20 delay=5;
 
-            # CORS
             add_header Access-Control-Allow-Origin $http_origin always;
             add_header Access-Control-Allow-Credentials true;
             add_header Access-Control-Allow-Methods "GET, POST, DELETE, OPTIONS";
             add_header Access-Control-Allow-Headers "Content-Type, Authorization";
+        }
 
-            # Handle OPTIONS
-            if ($request_method = OPTIONS) {
-                add_header Content-Length 0;
-                add_header Content-Type text/plain;
-                return 204;
-            }
+		# BackEnd Chat
+        location /chat/ {
+            proxy_pass http://backend-django-users;
+            proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Proto $scheme;
+			proxy_http_version 1.1;
+			proxy_set_header Upgrade $http_upgrade;
+			proxy_set_header Connection "upgrade";
+
+            limit_req zone=users_limit burst=20 delay=5;
+
+            add_header Access-Control-Allow-Origin $http_origin always;
+            add_header Access-Control-Allow-Credentials true;
+            add_header Access-Control-Allow-Methods "GET, POST, DELETE, OPTIONS";
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization";
         }
 
         # Default 404
