--- a/ft_trans/.env
+++ b/ft_trans/.env
@@ -12,3 +12,7 @@ YWT_KEY=vogliomangiareiltuopancreas
 # Email
 SEND_PASSWORD=jyyg okob xovn trsl
 SEND_EMAIL=69tf.trans@gmail.com
+
+# Redis
+REDIS_HOST=redis
+REDIS_PORT=6379
