--- a/ft_trans/backend/chat/Dockerfile
+++ b/ft_trans/backend/chat/Dockerfile
@@ -1,10 +1,10 @@
-FROM python:3.11-slim
+FROM python:3.11.5-slim-bullseye
 
 WORKDIR /app
 EXPOSE 8005
-COPY requirements.txt /app/
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt && \
-	apt-get update && apt-get install -y dos2unix
+	apt-get update && apt-get install -y libpq-dev dos2unix netcat
 COPY . .
 RUN dos2unix ./wait-for-it.sh
 RUN chmod +x ./wait-for-it.sh
