--- a/ft_trans/docker-compose.yml
+++ b/ft_trans/docker-compose.yml
@@ -55,6 +55,8 @@ services:
       - proxy
     ports:
       - "8005:8005"
+    depends_on:
+      - postgres
 
   # BackEnd DJango Game1
   backend-django-game1:
