--- a/ft_trans/proxy/nginx/nginx.conf
+++ b/ft_trans/proxy/nginx/nginx.conf
@@ -49,11 +49,17 @@ http {
         ssl_ciphers 'TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:TLS_AES_128_GCM_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
         # ===========
 
-        client_max_body_size 5M;
+        client_max_body_size 6M;
 
         if ($host !~* ^localhost$) {
             return 403;
         }
+
+		add_header X-XSS-Protection "1; mode=block" always;
+		add_header X-Content-Type-Options "nosniff" always;
+		add_header X-Frame-Options "SAMEORIGIN" always;
+		add_header Referrer-Policy "no-referrer" always;
+		add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
         # Frontend (Node.js)
         location / {
