--- a/ft_trans/proxy/nginx/nginx.conf
+++ b/ft_trans/proxy/nginx/nginx.conf
@@ -1,21 +1,17 @@
 events { }
 
 http {
-    # Keepalive
     proxy_http_version 1.1;
     proxy_set_header Connection "";
 
-    # Log personalizzati
     log_format custom_logs '$remote_addr - $remote_user [$time_local] '
                            '"$request" $status $body_bytes_sent '
                            '"$http_referer" "$http_user_agent" "$request_body"';
     access_log /var/log/nginx/access.log custom_logs;
 
-    # Protezione API: Limiti
     limit_req_zone $binary_remote_addr zone=users_limit:10m rate=10r/s;
     limit_req_zone $binary_remote_addr zone=gama1_limit:10m rate=10r/s;
     
-    # Server
     upstream frontend-node { 
         least_conn;
         keepalive 32;
@@ -33,11 +29,6 @@ http {
     }
 
     server {
-        # ====== HTTP
-        # listen 8000;
-        # ===========
-
-        # ====== HTTPS
         listen 8000 ssl;
         server_name localhost;
 
@@ -47,7 +38,6 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_prefer_server_ciphers off;
         ssl_ciphers 'TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:TLS_AES_128_GCM_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
-        # ===========
 
         client_max_body_size 6M;
 
@@ -56,10 +46,11 @@ http {
         }
 
 		add_header X-XSS-Protection "1; mode=block" always;
-		add_header X-Content-Type-Options "nosniff" always;
-		add_header X-Frame-Options "SAMEORIGIN" always;
-		add_header Referrer-Policy "no-referrer" always;
-		add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self' ws://localhost:8005; object-src 'none';" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header Referrer-Policy "no-referrer" always;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
         # Frontend (Node.js)
         location / {
@@ -118,7 +109,6 @@ http {
             add_header Access-Control-Allow-Headers "Content-Type, Authorization";
         }
 
-        # Default 404
         error_page 404 /404.html;
         location = /404.html {
             internal;
