--- a/ft_trans/proxy/nginx/nginx.conf
+++ b/ft_trans/proxy/nginx/nginx.conf
@@ -46,11 +46,17 @@ http {
         }
 
 		add_header X-XSS-Protection "1; mode=block" always;
-        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self' ws://localhost:8005; object-src 'none';" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header Referrer-Policy "no-referrer" always;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+		add_header Content-Security-Policy "default-src 'self'; 
+			script-src 'self' 'unsafe-inline' 'unsafe-eval'; 
+			style-src 'self' 'unsafe-inline'; 
+			img-src 'self' data:; 
+			font-src 'self'; 
+			connect-src 'self' wss://localhost:8000; 
+			object-src 'none';" always;
 
         # Frontend (Node.js)
         location / {
@@ -108,6 +114,28 @@ http {
             add_header Access-Control-Allow-Methods "GET, POST, DELETE, OPTIONS";
             add_header Access-Control-Allow-Headers "Content-Type, Authorization";
         }
+
+		# BackEnd online
+		location /online/ {
+			proxy_pass http://backend-django-chat:8005;
+			proxy_http_version 1.1;
+			proxy_set_header Upgrade $http_upgrade;
+			proxy_set_header Connection "Upgrade";
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		}
+
+		# BackEnd wchat
+		location /wchat/ {
+			proxy_pass http://backend-django-chat:8005;
+			proxy_http_version 1.1;
+			proxy_set_header Upgrade $http_upgrade;
+			proxy_set_header Connection "Upgrade";
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		}
 
         error_page 404 /404.html;
         location = /404.html {
