--- a/ft_trans/docker-compose.yml
+++ b/ft_trans/docker-compose.yml
@@ -9,7 +9,8 @@ services:
     ports:
       - "8000:8000"
     networks:
-      - proxy
+      - backend
+      - frontend
     depends_on:
       - frontend-node
       - backend-django-game1
@@ -24,10 +25,10 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     networks:
-      - proxy
+      - frontend
     volumes:
       - vol_img_users:/app/img/app/img_users
-  
+
   # BackEnd DJango Users
   backend-django-users:
     container_name: backend-django-users
@@ -38,7 +39,7 @@ services:
     env_file:
       - .env
     networks:
-      - proxy
+      - backend
     volumes:
       - vol_img_users:/app/img_users
     depends_on:
@@ -54,7 +55,7 @@ services:
     env_file:
       - .env
     networks:
-      - proxy
+      - backend
     depends_on:
       - postgres
 
@@ -68,7 +69,7 @@ services:
     env_file:
       - .env
     networks:
-      - proxy
+      - backend
     depends_on:
       - postgres
 
@@ -80,7 +81,7 @@ services:
     env_file:
       - .env
     networks:
-      - proxy
+      - backend
     volumes:
       - db_postgres:/var/lib/postgresql/data
 
@@ -92,12 +93,15 @@ services:
     env_file:
       - .env
     networks:
-      - proxy
+      - backend
 
-# Networks configuration
+# Networks
 networks:
-  proxy:
+  frontend:
     driver: bridge
+  backend:
+    driver: bridge
+    internal: true
 
 # Volumes
 volumes:
