--- a/ft_trans/proxy/nginx/nginx.conf
+++ b/ft_trans/proxy/nginx/nginx.conf
@@ -27,6 +27,11 @@ http {
         keepalive 32;
         server backend-django-game1:8003;
     }
+    upstream backend-django-chat { 
+        least_conn;
+        keepalive 32;
+        server backend-django-chat:8005;
+    }
 
     server {
         listen 8000 ssl;
@@ -50,13 +55,7 @@ http {
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header Referrer-Policy "no-referrer" always;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-		add_header Content-Security-Policy "default-src 'self'; 
-			script-src 'self' 'unsafe-inline' 'unsafe-eval'; 
-			style-src 'self' 'unsafe-inline'; 
-			img-src 'self' data:; 
-			font-src 'self'; 
-			connect-src 'self' wss://localhost:8000; 
-			object-src 'none';" always;
+		add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self' wss://localhost:8000; object-src 'none';" always;
 
         # Frontend (Node.js)
         location / {
@@ -117,7 +116,7 @@ http {
 
 		# BackEnd online
 		location /online/ {
-			proxy_pass http://backend-django-chat:8005;
+			proxy_pass http://backend-django-chat;
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection "Upgrade";
@@ -128,7 +127,7 @@ http {
 
 		# BackEnd wchat
 		location /wchat/ {
-			proxy_pass http://backend-django-chat:8005;
+			proxy_pass http://backend-django-chat;
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection "Upgrade";
