--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,12 @@
 [submodule "_common core/cub3D"]
 	path = _common core/cub3D
 	url = https://github.com/AnghiAndrei/cub3D.git
-[submodule "_common core/Webserv"]
-	path = _common core/Webserv
+[submodule "_common core/webserv"]
+	path = _common core/webserv
 	url = https://github.com/AnghiAndrei/webserv.git
 [submodule "_common core/minishell"]
 	path = _common core/minishell
 	url = https://github.com/AnghiAndrei/minishell.git
+[submodule "_common core/ft_transcendence"]
+	path = _common core/ft_transcendence
+	url = https://github.com/AnghiAndrei/ft_transcendence.git
