--- a/.gitmodules
+++ b/.gitmodules
@@ -4,8 +4,8 @@
 [submodule "_common core/cub3D"]
 	path = _common core/cub3D
 	url = https://github.com/AnghiAndrei/cub3D.git
-[submodule "_common core/webserv"]
-	path = _common core/webserv
+[submodule "_common core/Webserv"]
+	path = _common core/Webserv
 	url = https://github.com/AnghiAndrei/webserv.git
 [submodule "_common core/minishell"]
 	path = _common core/minishell
